# HySOM

./: .gitignore  CITATION.cff  README.md  main.py  meta.yaml  pyproject.toml  readthedocs.yaml  remove_setup._py_
HystSOM/: __init__.py  datasets.py  hystsom.py
data/: classified_loops.json
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/tutorials/: TQSOM_in_R.rst  analyse_TQ_data.ipynb  preparingInputData.ipynb  thesomclass.ipynb  vizfunctions.ipynb
docs/usage/: conda_env_setup.rst  how-tos.rst  howto.rst  installation.rst  quickstart.rst  referenceGuides.rst  tutorials.rst  uv_env_setup.rst
src/: __init__.py  functions.py  hystsom.py  validators.py
src/hysom/: __init__.py  _functions.py  _som.py  _validators.py  hysom.py  pretrainedSOM.py  train_functions.py  validators.py
src/hysom/data/: GTQSOM_prots.nc  QT_01191000.json  event_times_01191000.csv  generalTQSOM_prots.json
src/hysom/utils/: aux_funcs.py  datasets.py  plots.py  somplotter.py
src/hystsom/: __init__.py  _som.py  datasets.py  functions.py  hystsom.py  som.py  somplotter.py
src/hystsom/data/: classified_loops.json
src/hystsom/utils/: somplotter.py
